fix border img not showing on firefox by adding border-style:solid

--- a/style.css
+++ b/style.css
@@ -11,20 +11,28 @@ Version: 1.0.4
 Template: required-foundation
 Text Domain: requiredstarter
 */
-/*
-	Make the template work
+
+/**
+* 1.0 h(#)/a/p
+*
+* 
 */
+ 
+.selector {
+    float: left;
+}
 
-/*---------- h(#)/a/p ----------*/
-
-	h1, h2, h3, h4, h5, h6 {
+	h1, 
+	h2, 
+	h3, 
+	h4, 
+	h5, 
+	h6 {
 			font-family: 'Open Sans', sans-serif;
 			font-weight: 300;
 			text-shadow: 1px 1px #FFFFFF;
 		}
 
-	/*a {color: #1E90FF;}
-	a:hover {color: white;}*/
 
 	a:hover {
 			color: #7fddf6;
@@ -123,6 +131,7 @@ Text Domain: requiredstarter
 		-webkit-border-image:url('http://waterismysky.com/assets/sites/18/2014/04/border.png') 100% 0 100% 0 repeat; /* Safari 5 */
 		-o-border-image:url('http://waterismysky.com/assets/sites/18/2014/04/border.png') 100% 0 100% 0 repeat; /* Opera */
 		border-image:url('http://waterismysky.com/assets/sites/18/2014/04/border.png') 100% 0 100% 0 repeat;
+		border-style:solid;
 	}
 
 
